--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@mobx-devtools/tools": "^0.0.4",
     "@redux-devtools/extension": "^3.2.5",
-    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "formik": "^2.2.9",
     "mobx": "^6.9.0",
@@ -16,10 +16,8 @@
     "notiflix": "^3.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.1",
     "web-vitals": "^2.1.3",
     "yup": "^1.1.1"
   },
